// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentTitlePager component Should render the focused state without crashing 1`] = `
<ClickAwayListener
  onClickAway={[Function]}
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-typography-1"
    color="inherit"
    onClick={[Function]}
    title=""
    variant="h6"
  >
    <div
      className="makeStyles-nameWrapper-2"
    >
       
    </div>
    <form
      onSubmit={[Function]}
    >
      <WithStyles(ForwardRef(TextField))
        InputLabelProps={
          Object {
            "shrink": true,
          }
        }
        className="makeStyles-textField-3"
        defaultValue={1}
        inputProps={
          Object {
            "max": -1,
            "min": 1,
            "style": Object {
              "textAlign": "center",
            },
          }
        }
        margin="dense"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        title="Goto page"
        type="number"
      />
    </form>
  </WithStyles(ForwardRef(Typography))>
</ClickAwayListener>
`;

exports[`DocumentTitlePager component Should render the unfocused state without crashing 1`] = `
<ClickAwayListener
  onClickAway={[Function]}
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-typography-1"
    color="inherit"
    onClick={[Function]}
    title=""
    variant="h6"
  >
    <div
      className="makeStyles-nameWrapper-2"
    >
       
    </div>
    <div
      className="makeStyles-notFocusedText-4"
    >
      1
       / 
      -1
    </div>
  </WithStyles(ForwardRef(Typography))>
</ClickAwayListener>
`;
